# photoping

./: .env.example  .gitignore  README.md  email_sender.py  photo_selector.py  photoping.py  pyproject.toml  requirements.txt  setup_schedule.py
tests/: conftest.py  test_email_sender.py  test_photo_selector.py  test_photoping.py
